implement training on rlbench demos

--- a/r3m/cfgs/config_rep.yaml
+++ b/r3m/cfgs/config_rep.yaml
@@ -21,7 +21,7 @@ experiment: train_r3m
 lr: 1e-4
 # data
 alpha: 0.2
-dataset: "ego4d"
+dataset: "rlbench"
 wandbproject: 
 wandbuser: 
 doaug: "none"
